# Cross-The-Road

./: Banda.cpp  Banda.h  CMakeLists.txt  Joc.cpp  Joc.h  Jucator.cpp  Jucator.h  Obstacol.cpp  Obstacol.h  README.md  main.cpp  tastatura.txt
.github/workflows/: cmake.yml
